--- a/running/pubspec.yaml
+++ b/running/pubspec.yaml
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ^3.9.2
+  sdk: '>=3.4.0 <4.0.0' # Ampliamos la compatibilidad del SDK para las nuevas versiones
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -31,49 +31,47 @@ dependencies:
   flutter:
     sdk: flutter
 
-  # Dependencias principales
-  google_maps_flutter: ^2.9.0
-  google_maps_flutter_web: ^0.5.14+2
-  geolocator: ^11.1.0
-  geolocator_web: ^3.0.0
-  latlong2: ^0.8.2          # Para coordenadas (utilidades geográficas)
+  # Últimas versiones ESTABLES
+  google_maps_flutter: ^2.7.0
+  google_maps_flutter_web: ^0.5.8
+  geolocator: ^14.0.0
+  geolocator_web: ^4.1.0
+  latlong2: ^0.9.1
   
   # Gestión de estado
-  flutter_riverpod: ^2.6.1  # Estado reactivo (estable)
+  flutter_riverpod: ^2.6.1
   
-  # Almacenamiento local
-  isar: ^3.1.0+1          # Base de datos local high-performance
-  isar_flutter_libs: ^3.1.0+1  # Libs nativas para Isar
+  # Almacenamiento local (última versión estable)
+  isar: ^3.1.0+1
+  isar_flutter_libs: ^3.1.0+1
   
   # Geometría y mapas
-  turf: ^0.0.8            # Cálculos geométricos (polígonos, áreas)
+  turf: ^0.0.8
   
   # UI y navegación
-  go_router: ^14.3.0      # Navegación declarativa (estable actualizada)
+  go_router: ^16.0.0
   
   # Utilidades
-  path_provider: ^2.1.0   # Rutas del dispositivo
-  permission_handler: ^11.4.0  # Gestión de permisos (estable)
+  path_provider: ^2.1.3
+  permission_handler: ^12.0.1
   
   # Compartir
-  screenshot: ^2.5.0      # Captura de pantallas 
-  share_plus: ^7.2.2     # Compartir contenido (compatible)
+  screenshot: ^3.0.0
+  share_plus: ^12.0.0
   
-  # Firebase para backend - VERSIONES COMPATIBLES PROBADAS
-  firebase_core: ^2.32.0      # Core Firebase (versión base estable)
-  firebase_auth: ^4.17.8      # Autenticación (compatible con core 2.32)
-  cloud_firestore: ^4.17.3    # Base de datos Firestore (compatible)
-  firebase_storage: ^11.7.6   # Almacenamiento de archivos (compatible)
-  firebase_analytics: ^10.10.6 # Analytics (compatible)
-  firebase_crashlytics: ^3.5.7 # Crash reporting (compatible)
+  # Firebase para backend
+  firebase_core: ^4.0.0
+  firebase_auth: ^6.0.0
+  cloud_firestore: ^6.0.0
+  firebase_storage: ^13.0.0
+  firebase_analytics: ^12.0.0
+  firebase_crashlytics: ^5.0.0
   
   # Internacionalización
   flutter_localizations:
     sdk: flutter
-  intl: ^0.20.2           # Versión requerida por Flutter SDK
+  intl: ^0.20.0
 
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   google_fonts: ^6.2.1
 
@@ -81,61 +79,14 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
-  flutter_lints: ^4.0.0    # Versión estable de lints
+  flutter_lints: ^6.0.0
   
-  # Generación de código
-  isar_generator: ^3.1.0+1  # Generador para Isar
-  build_runner: ^2.4.13      # Herramienta compatible con isar_generator
+  # Generación de código (última versión estable)
+  isar_generator: ^3.1.0+1
+  build_runner: ^2.4.11
   
-  # Otros
-  json_annotation: ^4.8.0   # Anotaciones JSON (versión estable)
+  json_annotation: ^4.9.0
 
-# For information on the generic Dart part of this file, see the
-# following page: https://dart.dev/tools/pub/pubspec
-
-# The following section is specific to Flutter packages.
 flutter:
-
-  # The following line ensures that the Material Icons font is
-  # included with your application, so that you can use the icons in
-  # the material Icons class.
   uses-material-design: true
-  
-  # Para generar los componentes web (PWA)
   generate: true
-
-  # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
-
-  # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/to/resolution-aware-images
-
-  # For details regarding adding assets from package dependencies, see
-  # https://flutter.dev/to/asset-from-package
-
-  # To add custom fonts to your application, add a fonts section here,
-  # in this "flutter" section. Each entry in this list should have a
-  # "family" key with the font family name, and a "fonts" key with a
-  # list giving the asset and other descriptors for the font. For
-  # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
-  # For details regarding fonts from package dependencies,
-  # see https://flutter.dev/to/font-from-package
