--- a/running/android/app/src/main/AndroidManifest.xml
+++ b/running/android/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
             android:value="\${googleMapsApiKey}"/>
 
         <activity
-            android:name=".MainActivity"
+            android:name="com.cata1024.running.MainActivity"
             android:exported="true"
             android:launchMode="singleTop"
             android:taskAffinity=""
