--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
+# Web
 FIREBASE_API_KEY_WEB=AIzaSyBdooWtPdtgytKqGw0FneBMhoNPyFLoS2U
 FIREBASE_APP_ID_WEB=1:28475506464:web:782c4974a284d18f2c6145
 FIREBASE_MESSAGING_SENDER_ID_WEB=28475506464
@@ -5,8 +6,13 @@ FIREBASE_PROJECT_ID_WEB=running-app-uni
 FIREBASE_AUTH_DOMAIN_WEB=running-app-uni.firebaseapp.com
 FIREBASE_STORAGE_BUCKET_WEB=running-app-uni.firebasestorage.app
 FIREBASE_MEASUREMENT_ID_WEB=G-7GKEG48RPX
+
+# Android
 FIREBASE_API_KEY_ANDROID=AIzaSyBqcd9IJcaH18idl5wfLHnkNSuEuPZA5ak
 FIREBASE_APP_ID_ANDROID=1:28475506464:android:42127b726cf1b06d2c6145
 FIREBASE_MESSAGING_SENDER_ID_ANDROID=28475506464
-FIREBEASE_PROJECT_ID_ANDROID=running-app-uni
+FIREBASE_PROJECT_ID_ANDROID=running-app-uni
 FIREBASE_STORAGE_BUCKET_ANDROID=running-app-uni.appspot.com
+
+# Maps
+GOOGLE_MAPS_API_KEY=AIzaSyD7p9SqQYqJ87vWdBXa_lJKUIxL91h79s4
