--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,93 +1,57 @@
 name: running
-description: "A new Flutter project."
-# The following line prevents the package from being accidentally published to
-# pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
-
-# The following defines the version and build number for your application.
-# A version number is three numbers separated by dots, like 1.2.43
-# followed by an optional build number separated by a +.
-# Both the version and the builder number may be overridden in flutter
-# build by specifying --build-name and --build-number, respectively.
-# In Android, build-name is used as versionName while build-number used as versionCode.
-# Read more about Android versioning at https://developer.android.com/studio/publish/versioning
-# In iOS, build-name is used as CFBundleShortVersionString while build-number is used as CFBundleVersion.
-# Read more about iOS versioning at
-# https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-# In Windows, build-name is used as the major, minor, and patch parts
-# of the product and file versions while build-number is used as the build suffix.
+description: "A running app to track your runs and territories"
+publish_to: 'none'
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.4.0 <4.0.0' # Ampliamos la compatibilidad del SDK para las nuevas versiones
+  sdk: '>=3.0.0 <4.0.0'
+  flutter: '>=3.24.0'
 
-# Dependencies specify other packages that your package needs in order to work.
-# To automatically upgrade your package dependencies to the latest versions
-# consider running `flutter pub upgrade --major-versions`. Alternatively,
-# dependencies can be manually updated by changing the version numbers below to
-# the latest version available on pub.dev. To see which dependencies have newer
-# versions available, run `flutter pub outdated`.
 dependencies:
   flutter:
     sdk: flutter
 
-  # Últimas versiones ESTABLES
-  google_maps_flutter: ^2.7.0
-  google_maps_flutter_web: ^0.5.8
-  geolocator: ^14.0.0
-  geolocator_web: ^4.1.0
-  latlong2: ^0.9.1
-  
-  # Gestión de estado
   flutter_riverpod: ^2.6.1
-  
-  # Almacenamiento local (última versión estable)
-  isar: ^3.1.0+1
-  isar_flutter_libs: ^3.1.0+1
-  
-  # Geometría y mapas
-  turf: ^0.0.8
-  
-  # UI y navegación
-  go_router: ^16.0.0
-  
-  # Utilidades
-  path_provider: ^2.1.3
+  go_router: ^16.2.4
+  intl: ^0.20.2
+
+  drift: ^2.13.0
+  drift_dev: ^2.13.0
+  sqlite3_flutter_libs: ^0.5.9
+  path_provider: ^2.1.5
   permission_handler: ^12.0.1
-  
-  # Compartir
-  screenshot: ^3.0.0
-  share_plus: ^12.0.0
-  
-  # Firebase para backend
-  firebase_core: ^4.0.0
-  firebase_auth: ^6.0.0
-  cloud_firestore: ^6.0.0
-  firebase_storage: ^13.0.0
-  firebase_analytics: ^12.0.0
-  firebase_crashlytics: ^5.0.0
-  
-  # Internacionalización
+  latlong2: ^0.9.1
+  google_fonts: ^6.1.0
+  dynamic_color: ^1.6.0
+  flutter_dotenv: ^5.1.0
+  screenshot: ^2.0.0
+  share_plus: ^7.2.1
+  cupertino_icons: ^1.0.6
+
+  json_annotation: ^4.9.0
+  firebase_core: ^2.32.0
+  firebase_auth: ^4.17.9
+  firebase_crashlytics: ^3.5.7
+  firebase_storage: ^11.0.7
+  cloud_firestore: ^4.17.5
+
   flutter_localizations:
     sdk: flutter
-  intl: ^0.20.0
 
-  cupertino_icons: ^1.0.8
-  google_fonts: ^6.2.1
-  dynamic_color: ^1.8.1
+  # Google Maps
+  google_maps_flutter: ^2.9.0
+  geolocator: ^12.0.0
+  geocoding: ^3.0.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
   flutter_lints: ^6.0.0
-  
-  # Generación de código (última versión estable)
-  isar_generator: ^3.1.0+1
-  build_runner: ^2.4.11
-  
-  json_annotation: ^4.9.0
+  build_runner: ^2.4.6
+  json_serializable: ^6.8.0
 
 flutter:
   uses-material-design: true
   generate: true
+  assets:
+    - .env
