Added User Authentication

--- a/.env
+++ b/.env
@@ -9,10 +9,10 @@ FIREBASE_MEASUREMENT_ID_WEB=G-7GKEG48RPX
 
 # Android
 FIREBASE_API_KEY_ANDROID=AIzaSyBqcd9IJcaH18idl5wfLHnkNSuEuPZA5ak
-FIREBASE_APP_ID_ANDROID=1:28475506464:android:42127b726cf1b06d2c6145
+FIREBASE_APP_ID_ANDROID=1:28475506464:android:2c5177b4c28647ee2c6145
 FIREBASE_MESSAGING_SENDER_ID_ANDROID=28475506464
 FIREBASE_PROJECT_ID_ANDROID=running-app-uni
-FIREBASE_STORAGE_BUCKET_ANDROID=running-app-uni.appspot.com
+FIREBASE_STORAGE_BUCKET_ANDROID=running-app-uni.firebasestorage.app
 
 # Maps
 GOOGLE_MAPS_API_KEY=AIzaSyD7p9SqQYqJ87vWdBXa_lJKUIxL91h79s4
