--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   flutter_dotenv: ^5.1.0
   screenshot: ^2.0.0
   share_plus: ^7.2.1
+  google_sign_in: ^6.2.1
   cupertino_icons: ^1.0.6
 
   json_annotation: ^4.9.0
