--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,54 +5,66 @@ version: 1.0.0+1
 
 environment:
   sdk: '>=3.0.0 <4.0.0'
-  flutter: '>=3.24.0'
+  flutter: '>=3.24.0' # Esta versión es la más reciente.
 
 dependencies:
   flutter:
     sdk: flutter
 
-  flutter_riverpod: ^2.6.1
+  # State Management & Routing
+  flutter_riverpod: ^3.0.2
   go_router: ^16.2.4
-  intl: ^0.20.2
 
-  drift: ^2.13.0
-  drift_dev: ^2.13.0
-  sqlite3_flutter_libs: ^0.5.9
+  # Utilities
+  intl: ^0.20.2
   path_provider: ^2.1.5
   permission_handler: ^12.0.1
   latlong2: ^0.9.1
-  google_fonts: ^6.1.0
-  dynamic_color: ^1.6.0
-  flutter_dotenv: ^5.1.0
-  screenshot: ^2.0.0
-  share_plus: ^7.2.1
-  google_sign_in: ^6.2.1
+  google_fonts: ^6.2.1
+  dynamic_color: ^1.7.0
+  flutter_dotenv: ^6.0.0
+  screenshot: ^3.0.0
+  share_plus: ^12.0.0
+  flutter_svg: ^2.2.1
+  google_sign_in: ^7.2.0
   cupertino_icons: ^1.0.6
-
+  google_polyline_algorithm: ^3.1.0
   json_annotation: ^4.9.0
-  firebase_core: ^2.32.0
-  firebase_auth: ^4.17.9
-  firebase_crashlytics: ^3.5.7
-  firebase_storage: ^11.0.7
-  cloud_firestore: ^4.17.5
 
-  flutter_localizations:
-    sdk: flutter
+  # Firebase
+  firebase_core: ^4.1.1
+  firebase_auth: ^6.1.0
+  firebase_crashlytics: ^5.0.2
+  firebase_storage: ^13.0.2
+  cloud_firestore: ^6.0.2
+
+  # Database (Drift)
+  drift: ^2.28.2
+  drift_dev: ^2.28.3
+  sqlite3_flutter_libs: ^0.5.40
+  sqlite3: ^2.9.2
 
   # Google Maps
-  google_maps_flutter: ^2.9.0
-  geolocator: ^12.0.0
-  geocoding: ^3.0.0
+  google_maps_flutter: ^2.13.1
+  geolocator: ^14.0.2
+  geocoding: ^4.0.0
+  vector_graphics: ^1.1.19
+  
+  flutter_localizations:
+    sdk: flutter
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^6.0.0
-  build_runner: ^2.4.6
-  json_serializable: ^6.8.0
+
+  # Code Generation
+  build_runner: ^2.4.13
+  json_serializable: ^6.11.1
 
 flutter:
   uses-material-design: true
   generate: true
   assets:
     - .env
+    - assets/icons/
