--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,10 +26,15 @@ dependencies:
   screenshot: ^3.0.0
   share_plus: ^12.0.0
   flutter_svg: ^2.2.1
-  google_sign_in: ^7.2.0
+  google_sign_in: ^6.2.1
   cupertino_icons: ^1.0.6
   google_polyline_algorithm: ^3.1.0
   json_annotation: ^4.9.0
+  image_picker: ^1.1.1
+  
+  # Clean Architecture
+  dartz: ^0.10.1
+  equatable: ^2.0.5
 
   # Firebase
   firebase_core: ^4.1.1
@@ -49,6 +54,7 @@ dependencies:
   geolocator: ^14.0.2
   geocoding: ^4.0.0
   vector_graphics: ^1.1.19
+  turf: ^0.0.10
   
   flutter_localizations:
     sdk: flutter
