changed database integration and fixed map switch

--- a/.env
+++ b/.env
@@ -16,3 +16,6 @@ FIREBASE_STORAGE_BUCKET_ANDROID=running-app-uni.firebasestorage.app
 
 # Maps
 GOOGLE_MAPS_API_KEY=AIzaSyD7p9SqQYqJ87vWdBXa_lJKUIxL91h79s4
+
+# Backend API
+BASE_API_URL=https://api-64fkq3y6sq-tl.a.run.app
