--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   google_polyline_algorithm: ^3.1.0
   json_annotation: ^4.9.0
   image_picker: ^1.1.1
+  http: ^1.2.1
   
   # Clean Architecture
   dartz: ^0.10.1
@@ -45,7 +46,6 @@ dependencies:
 
   # Database (Drift)
   drift: ^2.28.2
-  drift_dev: ^2.28.3
   sqlite3_flutter_libs: ^0.5.40
   sqlite3: ^2.9.2
 
@@ -66,6 +66,7 @@ dev_dependencies:
 
   # Code Generation
   build_runner: ^2.4.13
+  drift_dev: ^2.28.3
   json_serializable: ^6.11.1
 
 flutter:
