--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   json_annotation: ^4.9.0
   image_picker: ^1.1.1
   http: ^1.2.1
+  collection: ^1.18.0
   
   # Clean Architecture
   dartz: ^0.10.1
