--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,29 @@
-# Firebase Configuration
-# Obtener estos valores desde Firebase Console > Project Settings
-FIREBASE_API_KEY=your_firebase_api_key_here
-FIREBASE_APP_ID=your_firebase_app_id_here
-FIREBASE_MESSAGING_SENDER_ID=your_messaging_sender_id_here
-FIREBASE_PROJECT_ID=your_project_id_here
-FIREBASE_STORAGE_BUCKET=your_storage_bucket_here
+##############################################
+# Client runtime configuration (.env)
+# No incluir secretos de backend aquí.
+##############################################
 
-# Google Maps API Key
-# Obtener desde Google Cloud Console > APIs & Services > Credentials
-GOOGLE_MAPS_API_KEY=your_google_maps_api_key_here
+# Base URL del backend (Functions/Cloud Run) sin slash final
+BASE_API_URL=https://api-your-env-REGION.run.app
 
-# Environment
-# Valores posibles: development, staging, production
+# Firebase Web
+FIREBASE_API_KEY_WEB=
+FIREBASE_APP_ID_WEB=
+FIREBASE_MESSAGING_SENDER_ID_WEB=
+FIREBASE_PROJECT_ID_WEB=
+FIREBASE_AUTH_DOMAIN_WEB=
+FIREBASE_STORAGE_BUCKET_WEB=
+FIREBASE_MEASUREMENT_ID_WEB=
+
+# Firebase Android
+FIREBASE_API_KEY_ANDROID=
+FIREBASE_APP_ID_ANDROID=
+FIREBASE_MESSAGING_SENDER_ID_ANDROID=
+FIREBASE_PROJECT_ID_ANDROID=
+FIREBASE_STORAGE_BUCKET_ANDROID=
+
+# Google Maps API Key (cliente)
+GOOGLE_MAPS_API_KEY=
+
+# Environment: development | staging | production
 ENVIRONMENT=development
