--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,83 +4,102 @@ publish_to: 'none'
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.0.0 <4.0.0'
-  flutter: '>=3.24.0' # Esta versión es la más reciente.
+  sdk: '>=3.3.0 <4.0.0'
+  flutter: '>=3.24.0'
 
 dependencies:
-  flutter:
-    sdk: flutter
-
-  # State Management & Routing
-  flutter_riverpod: ^3.0.2
-  go_router: ^16.2.4
-
-  # Utilities
-  intl: ^0.20.2
-  path_provider: ^2.1.5
-  permission_handler: ^12.0.1
-  latlong2: ^0.9.1
-  google_fonts: ^6.2.1
-  dynamic_color: ^1.7.0
-  flutter_dotenv: ^6.0.0
-  screenshot: ^3.0.0
-  share_plus: ^12.0.0
-  flutter_svg: ^2.2.1
-  google_sign_in: ^6.2.1
-  cupertino_icons: ^1.0.6
-  google_polyline_algorithm: ^3.1.0
-  json_annotation: ^4.9.0
-  image_picker: ^1.1.1
-  http: ^1.2.1
-  collection: ^1.18.0
-  shimmer: ^2.0.0
   cached_network_image: ^3.3.1
-  url_launcher: ^6.3.2
-  package_info_plus: ^8.3.1
-  
-  # Clean Architecture
+  cloud_firestore: ^6.0.3
+  cloud_functions: ^6.0.2
+  collection: ^1.18.0
+  cupertino_icons: ^1.0.6
   dartz: ^0.10.1
+  drift: ^2.29.0
+  dynamic_color: ^1.7.0
   equatable: ^2.0.5
-
-  # Firebase
-  firebase_core: ^4.1.1
+  firebase_app_check: ^0.4.1
   firebase_auth: ^6.1.0
+  firebase_core: ^4.2.0
   firebase_crashlytics: ^5.0.2
   firebase_storage: ^13.0.4
-  cloud_firestore: ^6.0.2
-  firebase_app_check: ^0.4.1
-  cloud_functions: ^6.0.2
-
-  # Database (Drift)
-  drift: ^2.28.2
-  sqlite3_flutter_libs: ^0.5.40
-  sqlite3: ^2.9.2
-
-  # Google Maps
-  google_maps_flutter: ^2.13.1
-  geolocator: ^14.0.2
-  geocoding: ^4.0.0
-  vector_graphics: ^1.1.19
-  turf: ^0.0.10
-  
+  flutter:
+    sdk: flutter
+  flutter_dotenv: ^6.0.0
+  flutter_local_notifications: ^19.5.0
   flutter_localizations:
     sdk: flutter
-  shared_preferences: ^2.5.3
+  flutter_riverpod: ^3.0.3
+  flutter_svg: ^2.2.1
+  geocoding: ^4.0.0
+  geolocator: ^14.0.2
+  go_router: ^16.2.4
+  google_fonts: ^6.2.1
+  google_maps_flutter: ^2.13.1
+  google_polyline_algorithm: ^3.1.0
+  google_sign_in: ^7.2.0
+  http: ^1.2.1
+  image_picker: ^1.2.0
   in_app_review: ^2.0.11
+  intl: ^0.20.2
+  json_annotation: ^4.9.0
+  latlong2: ^0.9.1
+  package_info_plus: ^8.3.1
+  path_provider: ^2.1.5
+  permission_handler: 12.0.1
+  riverpod_annotation: ^3.0.3
+  screenshot: ^3.0.0
+  share_plus: ^12.0.0
+  shared_preferences: ^2.5.3
+  shimmer: ^3.0.0
+  sqlite3: ^2.9.4
+  sqlite3_flutter_libs: ^0.5.20
+  timezone: ^0.10.1
+  turf: ^0.0.10
+  url_launcher: ^6.3.2
+  vector_graphics: ^1.1.19
 
 dev_dependencies:
+  build_runner: ^2.4.13
+  drift_dev: ^2.29.0
+  flutter_lints: ^6.0.0
   flutter_test:
     sdk: flutter
-  flutter_lints: ^6.0.0
-
-  # Code Generation
-  build_runner: ^2.4.13
-  drift_dev: ^2.28.3
   json_serializable: ^6.11.1
+  riverpod_generator: ^3.0.3
 
 flutter:
   uses-material-design: true
   generate: true
+
   assets:
     - .env
     - assets/icons/
+    - assets/fonts/
+
+  fonts:
+    - family: Inter
+      fonts:
+        - asset: assets/fonts/Inter-Thin.ttf
+          weight: 100
+        - asset: assets/fonts/Inter-ExtraLight.ttf
+          weight: 200
+        - asset: assets/fonts/Inter-Light.ttf
+          weight: 300
+        - asset: assets/fonts/Inter-Regular.ttf
+          weight: 400
+        - asset: assets/fonts/Inter-Medium.ttf
+          weight: 500
+        - asset: assets/fonts/Inter-SemiBold.ttf
+          weight: 600
+        - asset: assets/fonts/Inter-Bold.ttf
+          weight: 700
+        - asset: assets/fonts/Inter-ExtraBold.ttf
+          weight: 800
+        - asset: assets/fonts/Inter-Black.ttf
+          weight: 900
+
+flutter_intl:
+  enabled: true
+  arb_dir: lib/l10n
+  output_dir: lib/generated
+  class_name: S
