--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,7 @@ dependencies:
 dev_dependencies:
   build_runner: ^2.4.13
   drift_dev: ^2.29.0
+  flutter_launcher_icons: ^0.14.1
   flutter_lints: ^6.0.0
   flutter_test:
     sdk: flutter
@@ -74,30 +75,23 @@ flutter:
   assets:
     - .env
     - assets/icons/
-    - assets/fonts/
 
-  fonts:
-    - family: Inter
-      fonts:
-        - asset: assets/fonts/Inter-Thin.ttf
-          weight: 100
-        - asset: assets/fonts/Inter-ExtraLight.ttf
-          weight: 200
-        - asset: assets/fonts/Inter-Light.ttf
-          weight: 300
-        - asset: assets/fonts/Inter-Regular.ttf
-          weight: 400
-        - asset: assets/fonts/Inter-Medium.ttf
-          weight: 500
-        - asset: assets/fonts/Inter-SemiBold.ttf
-          weight: 600
-        - asset: assets/fonts/Inter-Bold.ttf
-          weight: 700
-        - asset: assets/fonts/Inter-ExtraBold.ttf
-          weight: 800
-        - asset: assets/fonts/Inter-Black.ttf
-          weight: 900
-
+flutter_launcher_icons:
+  image_path: assets/icons/running.png
+  android: true
+  ios: true
+  web:
+    generate: true
+    image_path: assets/icons/running.png
+    background_color: "#1A1A2E"
+    theme_color: "#1A1A2E"
+  windows:
+    generate: true
+    image_path: assets/icons/running.png
+  macos:
+    generate: true
+    image_path: assets/icons/running.png
+  min_sdk_android: 24
 flutter_intl:
   enabled: true
   arb_dir: lib/l10n
