--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,7 @@ dependencies:
   flutter_svg: ^2.2.1
   geocoding: ^4.0.0
   geolocator: ^14.0.2
-  go_router: ^16.2.4
+  go_router: ^17.0.0
   google_fonts: ^6.2.1
   google_maps_flutter: ^2.13.1
   google_polyline_algorithm: ^3.1.0
@@ -59,14 +59,26 @@ dependencies:
   vector_graphics: ^1.1.19
 
 dev_dependencies:
-  build_runner: ^2.4.13
+  build_runner: ^2.4.8
+  custom_lint: ^0.8.0
   drift_dev: ^2.29.0
-  flutter_launcher_icons: ^0.14.1
+  flutter_gen_runner: ^5.4.0
+  flutter_launcher_icons: ^0.14.4
   flutter_lints: ^6.0.0
   flutter_test:
     sdk: flutter
-  json_serializable: ^6.11.1
+  json_serializable: ^6.7.1
+  mockito: ^5.4.4
   riverpod_generator: ^3.0.3
+  test: ^1.24.0
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/icons/running.png"
+  min_sdk_android: 21 # Minimo soportado por Flutter
+  adaptive_icon_background: "#ffffff"
+  adaptive_icon_foreground: "assets/icons/running_foreground.png"
 
 flutter:
   uses-material-design: true
@@ -76,22 +88,6 @@ flutter:
     - .env
     - assets/icons/
 
-flutter_launcher_icons:
-  image_path: assets/icons/running.png
-  android: true
-  ios: true
-  web:
-    generate: true
-    image_path: assets/icons/running.png
-    background_color: "#1A1A2E"
-    theme_color: "#1A1A2E"
-  windows:
-    generate: true
-    image_path: assets/icons/running.png
-  macos:
-    generate: true
-    image_path: assets/icons/running.png
-  min_sdk_android: 24
 flutter_intl:
   enabled: true
   arb_dir: lib/l10n
